add support springboot gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,49 @@ spring.datasource.password=pwd124
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+#spring.jmx.enabled=false
+#spring.cloud.gateway.server.webflux.default-filters[0].name='PrefixPath'
+#spring.cloud.gateway.server.webflux.default-filters[0].args.prefix=/httpbin
+#spring.cloud.gateway.server.webflux.default-filters[1].name=AddResponseHeader
+#spring.cloud.gateway.server.webflux.default-filters[1].args.name='X-Response-Default-Foo'
+#spring.cloud.gateway.server.webflux.default-filters[1].args.value=Default-Bar
+#
+#
+#spring.cloud.gateway.server.webflux.routes[0].id=agent_chat
+#spring.cloud.gateway.server.webflux.routes[0].uri=ws://localhost:10000
+#spring.cloud.gateway.server.webflux.routes[0].order=9000
+#spring.cloud.gateway.server.webflux.routes[0].predicates[0].args.name='Path'
+#spring.cloud.gateway.server.webflux.routes[0].predicates[0].args.value=/echo
+#
+#spring.cloud.gateway.server.webflux.routes[1].id=agent_user
+#spring.cloud.gateway.server.webflux.routes[1].uri=http://localhost:8080
+#spring.cloud.gateway.server.webflux.routes[1].order=10000
+#spring.cloud.gateway.server.webflux.routes[1].predicates[0].args.name='Path'
+#spring.cloud.gateway.server.webflux.routes[1].predicates[0].args.value=/**
+
+
+# Redis
+spring.data.redis.timeout=60000
+spring.data.redis.jedis.pool.max-idle=8
+spring.data.redis.jedis.pool.min-idle=0
+spring.data.redis.jedis.pool.max-active=500
+spring.data.redis.jedis.pool.max-wait=1000
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=7001
+spring.data.redis.password=password
+
+
+logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.org.springframework.http.server.reactive=DEBUG
+logging.level.org.springframework.web.reactive=DEBUG
+logging.level.reactor.ipc.netty=DEBUG
+logging.level.reactor.netty=DEBUG
+
+management.endpoints.web.exposure.include=*
+
+
+
+
