--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,28 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webmvc'
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-gateway
+	implementation("org.springframework.cloud:spring-cloud-starter-gateway:4.3.0")
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-context
+	implementation("org.springframework.cloud:spring-cloud-context:4.3.0")
+	// https://mvnrepository.com/artifact/com.bucket4j/bucket4j_jdk17-core
+	implementation("com.bucket4j:bucket4j_jdk17-core:8.14.0")
+	// https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine
+	implementation("com.github.ben-manes.caffeine:caffeine:3.2.0")
+	implementation("org.springframework.boot:spring-boot-starter-data-redis:3.5.0")
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
+	implementation("org.springframework.boot:spring-boot-starter-actuator:3.5.0")
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
+	implementation("org.springframework.boot:spring-boot-starter-webflux:3.5.0")
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-gateway-server
+	implementation("org.springframework.cloud:spring-cloud-gateway-server:4.3.0")
+	// https://mvnrepository.com/artifact/org.isomorphism/token-bucket
+	implementation("org.isomorphism:token-bucket:1.7")
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-loadbalancer
+	implementation("org.springframework.cloud:spring-cloud-starter-loadbalancer:4.3.0")
+
+	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.110.Final:osx-aarch_64'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -43,6 +63,7 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
